Fixed main search bar filter, and main spacing

--- a/styles/global.css
+++ b/styles/global.css
@@ -3,14 +3,16 @@ a {
   text-decoration: none;
 }
 
+main {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 footer {
   padding: 40px;
   margin-top: auto;
   text-align: center;
   background-color: #303030;
-  /* position: fixed;
-  bottom: 0;
-  width: 100%; */
 }
 
 footer p {
